--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Планировщик задач</h1>
+        <div class="task">
+            <h2>Добавить задачу</h2>
+            <input type="text" class="i-1" >
+            <button class="b-1">Добавить</button>
+        </div>
+        <div class="tasklist">
+            <h2>Список задач</h2>
+            
+        </div>
+
+    </div>
 
     <script src="index.js"></script>
 </body>
