--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Планировщик задач</h1>
         <div class="task">
             <h2>Добавить задачу</h2>
-            <input type="text" class="i-1" >
+            <input type="text" placeholder="Задача" class="i-1" >
             <button class="b-1">Добавить</button>
         </div>
         <div class="tasklist">
