--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
         </div>
         <div class="task_list">
             <h2>Список задач</h2>
-            <div class="display">
-                <div class="task_card">
-                    
-                </div>
+            <div class="task_card">
+                <ul id="tasks_group">
+                    <li class="t-1">
+                        <span class="task_title"></span>
+                        
+                    </li>
+                </ul>
             </div>
         </div>
 
