--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
         <div class="task_list">
             <h2>Список задач</h2>
             <div class="task_card">
-                <ul id="tasks_group">
-                    <li class="t-1">
-                        <span class="task_title"></span>
-                        
+                <ul id="tasksGroup" class="list-group">
+                    <li id="emptyList">
+                        <div class="empty-list_title">Нет задач</div>
                     </li>
+                    <!-- <li class="t-1">
+                        <span class="task_title"></span>
+                        <input type="checkbox"/>  
+                    </li> -->
                 </ul>
             </div>
         </div>
