--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     </li> -->
                 </ul>
             </div>
+            <button type="clear" class="delete">Удалить задачи</button>
         </div>
 
     </div>
