--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Планировщик задач</h1>
         <div class="task">
             <h2>Добавить задачу</h2>
-            <form id="task_form">
+            <form id="task-form">
                 <input type="text" placeholder="Задача" class="i-1" id="taskInput">
                 <button type="submit" class="b-1">Добавить</button>
             </form>
@@ -23,7 +23,7 @@
             <div class="task_card">
                 <ul id="tasksGroup" class="list-group">
                     <li id="emptyList">
-                        <div class="empty-list_title">Нет задач</div>
+                        <div class="empty-list-title">Нет задач</div>
                     </li>
                     <!-- <li class="t-1">
                         <span class="task_title"></span>
