--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="task_list">
             <h2>Список задач</h2>
-            <div class="task_card">
+            <div class="task-card">
                 <ul id="tasksGroup" class="list-group">
                     <li id="emptyList">
                         <div class="empty-list-title">Нет задач</div>
